= ActiveMerchant CHANGELOG

* Fix remote CardStreamGateway tests [cody]
* Map merchant AVS codes to street and postal match codes [cody]
* Update CardStreamGateway to support avs and cvv data [cody]
* Remove merchant_data hash. Add additional CVV codes [cody]
* Update QuickpayGateway to support merchant_data hash. Remove test_result_from_cc_number. [cody]
* Update LinkpointGateway to support merchant_data hash. Remove test_result_from_cc_number. [cody]
* Update PsigateGateway to support merchant_data hash. Remove test_result_from_cc_number. [cody]
* Update MonerisGateway to support merchant_data hash. Remove test_result_from_cc_number. [cody]
* Remove AVS Message and CVV2 Message from params hash in Authorize.net [cody]
* Update BrainTreeGateway to support merchant_data hash [cody]
* Update PaypalGateway to support merchant_data hash [cody]
* Update Payflow to support merchant_data hash [cody]
* Add card data to PayJunction response. PayJunction does not return the CVV or AVS result codes. Remote test_result_from_cc_number from PayJunction. [cody]
* Rename CCVResult to CVVResult to be more aligned with ActiveMerchant's usage of the term verification value [cody]
* Remove test_result_from_cc_number from Authorize.net in favour of mocking [cody]
* Add merchant_data hash, which contains all of the card_data, avs_result, and ccv_result. [cody]
* Add CCVResult for the Card Code Verification Result. Update Authorize.net to use the new class [cody]
* Rename AVSResult#match_type AVSResult#match [cody]
* Rename AVS::Result class to AVSResult [cody]
* Convert Authorize.net gateway to use the new AVS module [cody]
* Add AVS data to the Response object [cody]
* Fix credentials for remote Authorize.net TEST MODE test [cody]
* Add AVS module and AVS::Result class [cody]
* Update base gateway class RDOC [cody]