@@ -4,18 +4,41 @@ class TrustCommerceTest < Test::Unit::TestCase
   def setup
     @gateway = TrustCommerceGateway.new(fixtures(:trust_commerce))
     
-    @creditcard = credit_card('4111111111111111')
+    @credit_card = credit_card('4111111111111111')
+    
+    @amount = 100
     
     @valid_verification_value = '123'
     @invalid_verification_value = '1234'
     
-    @valid_address = {:address1 => '123 Test St.', :address2 => nil, :city => 'Somewhere', :state => 'CA', :zip => '90001'}
-    @invalid_address = {:address1 => '187 Apple Tree Lane.', :address2 => nil, :city => 'Woodside', :state => 'CA', :zip => '94062'}
+    @valid_address = {
+      :address1 => '123 Test St.', 
+      :address2 => nil, 
+      :city => 'Somewhere', 
+      :state => 'CA', 
+      :zip => '90001'
+    }
+    
+    @invalid_address = {
+      :address1 => '187 Apple Tree Lane.',
+      :address2 => nil,
+      :city => 'Woodside',
+      :state => 'CA',
+      :zip => '94062'
+    }
+    
+    @options = { 
+      :ip => '10.10.10.10',
+      :order_id => '#1000.1',
+      :email => 'cody@example.com', 
+      :billing_address => @valid_address,
+      :shipping_address => @valid_address
+    }
   end
   
   def test_bad_login
     @gateway.options[:login] = 'X'
-    assert response = @gateway.purchase(100, @creditcard)
+    assert response = @gateway.purchase(@amount, @credit_card, @options)
         
     assert_equal Response, response.class
     assert_equal ["error",
@@ -24,78 +47,60 @@ class TrustCommerceTest < Test::Unit::TestCase
 
     assert_match /A field was improperly formatted, such as non-digit characters in a number field/, response.message
     
-    assert_equal false, response.success?
+    assert_failure response
   end
   
-  def test_successful_purchase
-    assert response = @gateway.purchase(100, @creditcard)
-        
-    assert_equal Response, response.class  
+  def test_successful_purchase_with_avs
+    assert response = @gateway.purchase(@amount, @credit_card, @options)
+    assert_equal 'Y', response.avs_result['code']
     assert_match /The transaction was successful/, response.message
     
-    assert_equal true, response.success?
+    assert_success response
     assert !response.authorization.blank?
   end
   
   def test_unsuccessful_purchase_with_invalid_cvv
-    @creditcard.verification_value = @invalid_verification_value
-    assert response = @gateway.purchase(100, @creditcard)
+    @credit_card.verification_value = @invalid_verification_value
+    assert response = @gateway.purchase(@amount, @credit_card, @options)
         
     assert_equal Response, response.class
     assert_match /CVV failed; the number provided is not the correct verification number for the card/, response.message
-    assert_equal false, response.success?
+    assert_failure response
   end
-  
-  def test_successful_purchase_with_avs
-    assert response = @gateway.purchase(100, @creditcard, :address => @valid_address)
-    assert_equal 'Y', response.params["avs"]
-    assert_match /The transaction was successful/, response.message
     
-    assert_equal true, response.success?
-    assert !response.authorization.blank?
-  end
-  
   def test_purchase_with_avs_for_invalid_address
-    assert response = @gateway.purchase(100, @creditcard, :address => @invalid_address)
+    assert response = @gateway.purchase(@amount, @credit_card, @options.update(:billing_address => @invalid_address))
     assert_equal "N", response.params["avs"]
     assert_match /The transaction was successful/, response.message
     assert_success response
   end
   
-  def test_successful_authorize
-    @creditcard.verification_value = @valid_verification_value
-    assert response = @gateway.authorize(100, @creditcard)
+  def test_successful_authorize_with_avs
+    assert response = @gateway.authorize(@amount, @credit_card, {:address => @valid_address})
+    
+    assert_equal "Y", response.avs_result["code"]
     assert_match /The transaction was successful/, response.message
-    assert_equal true, response.success?
+
+    assert_success response
     assert !response.authorization.blank?
   end
   
   def test_unsuccessful_authorize_with_invalid_cvv
-    @creditcard.verification_value = @invalid_verification_value
-    assert response = @gateway.authorize(100, @creditcard)
+    @credit_card.verification_value = @invalid_verification_value
+    assert response = @gateway.authorize(@amount, @credit_card, @options)
     assert_match /CVV failed; the number provided is not the correct verification number for the card/, response.message
-    assert_equal false, response.success?
-  end
-    
-  def test_successful_authorize_with_avs
-    assert response = @gateway.authorize(100, @creditcard, {:address => @valid_address})
-    
-    assert_equal "Y", response.params["avs"]
-    assert_match /The transaction was successful/, response.message
-
-    assert_equal true, response.success?
-    assert !response.authorization.blank?
+    assert_failure response
   end
   
   def test_authorization_with_avs_for_invalid_address
-    assert response = @gateway.authorize(100, @creditcard, {:address => @invalid_address})
+    assert response = @gateway.authorize(@amount, @credit_card, @options.update(:billing_address => @invalid_address))
     assert_equal "N", response.params["avs"]
     assert_match /The transaction was successful/, response.message
     assert_success response
   end
   
   def test_successful_capture
-    auth = @gateway.authorize(300, @creditcard)
+    auth = @gateway.authorize(300, @credit_card)
     assert_success auth
     response = @gateway.capture(300, auth.authorization)
     
@@ -106,7 +111,7 @@ class TrustCommerceTest < Test::Unit::TestCase
   end
   
   def test_authorization_and_void
-    auth = @gateway.authorize(300, @creditcard)
+    auth = @gateway.authorize(300, @credit_card, @options)
     assert_success auth
     
     void = @gateway.void(auth.authorization)
@@ -117,31 +122,31 @@ class TrustCommerceTest < Test::Unit::TestCase
   end
   
   def test_successful_credit
-    assert response = @gateway.credit(100, '011-0022698151')
+    assert response = @gateway.credit(@amount, '011-0022698151')
     
     assert_match /The transaction was successful/, response.message
     assert_success response    
   end
   
   def test_store_failure
-    assert response = @gateway.store(@creditcard)
+    assert response = @gateway.store(@credit_card)
         
     assert_equal Response, response.class
-    assert_match /The merchant can't accept data passed in this field/, response.message    
+    assert_match %r{The merchant can't accept data passed in this field}, response.message    
     assert_failure response   
   end
   
   def test_unstore_failure
     assert response = @gateway.unstore('testme')
 
-    assert_match /The merchant can't accept data passed in this field/, response.message    
-    assert_equal false, response.success?   
+    assert_match %r{The merchant can't accept data passed in this field}, response.message    
+    assert_failure response
   end
   
   def test_recurring_failure
-    assert response = @gateway.recurring(100, @creditcard, :periodicity => :weekly)
+    assert response = @gateway.recurring(@amount, @credit_card, :periodicity => :weekly)
 
-    assert_match /The merchant can't accept data passed in this field/, response.message    
-    assert_equal false, response.success?   
+    assert_match %r{The merchant can't accept data passed in this field}, response.message    
+    assert_failure response
   end
 end
